--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>CPR, First Aid & BLS (Bilingual) | Andrea Bilingual-CPR + Maggali Design & More</title>
-  <meta name="description" content="Bilingual CPR, First Aid & BLS certification training (English/Spanish) for construction teams and healthcare facilities. Plus custom web design and print services by Maggali Design & More." />
+<title>CPR, First Aid & BLS (Bilingual) | Andrea Bilingual-CPR + Maggali Design & More</title>
+<meta name="description" content="Bilingual CPR, First Aid & BLS certification training (English/Spanish) for construction teams and healthcare facilities. Plus custom web design and print services by Maggali Design & More." />
 
-  <link rel="canonical" href="https://andreabilingualcpr.com/" />
-  <meta name="robots" content="index,follow" />
+<link rel="canonical" href="https://andreabilingualcpr.com/" />
+<meta name="robots" content="index,follow" />
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Andrea Bilingual-CPR + Maggali Design & More" />
-  <meta property="og:description" content="Bilingual CPR/First Aid/BLS training + custom web design and print services." />
-  <meta property="og:url" content="https://andreabilingualcpr.com/" />
-  <meta property="og:image" content="https://andreabilingualcpr.com/assets/hero-cpr-generated.png" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="CPR, First Aid & BLS (Bilingual) | Andrea Bilingual-CPR + Maggali Design & More" />
+<meta property="og:description" content="Bilingual CPR/First Aid/BLS training (English/Spanish) for construction and healthcare. Custom web design + print services." />
+<meta property="og:url" content="https://andreabilingualcpr.com/" />
+<meta property="og:image" content="https://andreabilingualcpr.com/assets/hero-cpr-generated.png" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Andrea Bilingual-CPR + Maggali Design & More" />
-  <meta name="twitter:description" content="Bilingual CPR/First Aid/BLS training + custom web design and print services." />
-  <meta name="twitter:image" content="https://andreabilingualcpr.com/assets/hero-cpr-generated.png" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="CPR, First Aid & BLS (Bilingual) | Andrea Bilingual-CPR + Maggali Design & More" />
+<meta name="twitter:description" content="Bilingual CPR/First Aid/BLS training + custom web design and print services." />
+<meta name="twitter:image" content="https://andreabilingualcpr.com/assets/hero-cpr-generated.png" />
+
 
   <style>
     :root{
